correction in searchbox alignment

--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -1,7 +1,7 @@
 .main {
     width: 100%;
     height: 100px;
-    margin: -50px 0 0 0;
+    margin: -95px 0 0 0;
     background-color: #fff !important;
     z-index: 100;
     box-shadow: 0 8px 6px -6px black;    
